Last fix for deploy, connection with front and data